--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="/index.html">Home</a>
         <a href="#services">Services</a>
         <a href="#about">About Us</a>
-        <a href="/html/contactUs.html">Contact Us</a>
+        <a href="html/contactUs.html">Contact Us</a>
         <a href="" class="btn">Get Started</a>
     </nav>
 
